...
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvResStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Status: Active"
            android:textColor="#6B2B2B"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvResTickets"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
...
